<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="service_name">CardEmulation Sample</string>
    <string name="card_title">Sample Loyalty Card</string>
    <string name="app_name">بیست پی پذیرنده</string>
    <string name="applink">
<a href="https://www.bistpay.com/terms/">کلیه قوانین و مقررات پذیرندگی را مطالعه کرده ام و با آن ها موافقم.</a>
</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="default_error">خطا در سامانه. لطفا مجدد تلاش کنید.</string>
    <string name="splash_text">بیست پی</string>
    <string name="api_retry_error">ارتباط اینترنتی خود را بررسی نمایید.</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="empty_phone_number_error">لطفا شماره را وارد کنید.</string>
    <string name="empty_amount_error">لطفا مبلغ را وارد کنید.</string>
    <string name="empty_description_error">لطفا توضیحات را وارد کنید.</string>
    <string name="item_not_found">موردی یافت نشد.</string>
    <string name="verify">اعتبار سنجی</string>
    <string name="user_info">ورود اطلاعات کاربر </string>
    <string name="user">  کاربر </string>
    <string name="confirm">تایید</string>
    <string name="activate">فعال سازی</string>
    <string name="login">ورود</string>
    <string name="logout">خروج</string>
    <string name="logout_message">آیا مایل به خروج از اپلیکییشن هستید؟</string>
    <string name="remove">حذف</string>
    <string name="accept">تأیید</string>
    <string name="unit">ریال</string>
    <string name="unit_toman">تومان</string>
    <string name="cancel">انصراف</string>
    <string name="close">بستن</string>
    <string name="amount">مبلغ</string>
    <string name="delete">حذف</string>
    <string name="yes">بله</string>
    <string name="understand">فهمیدم!</string>
    <string name="next">بعدی</string>
    <string name="change_receiver">تغییر گیرنده</string>
    <string name="change_amount">تغییر مبلغ</string>
    <string name="transition_amount">مبلغ قابل انتقال</string>
    <string name="account_balance">موجودی حساب</string>
    <string name="future_facility">این امکان در نسخه های بعدی فعال خواهد شد</string>
    <string name="just_merchant">برای استفاده از این امکان ابتدا پروفایل خود را کامل کنید.</string>
    <string name="just_merchant2">برای استفاده از این امکان باید پذیرنده باشید.</string>
    <string name="double_top_to_exit">برای خروج مجددا بازگشت را بفشارید</string>
    <string name="mobile_no_title">شماره همراه</string>
    <string name="business_title">صاحب چه نوع کسب و کاری هستید؟</string>
    <string name="business_type_legal">حقوقی</string>
    <string name="business_type_real">حقیقی</string>
    <string name="register_mobile_no">لطفا شماره همراه خود را وارد کنید.</string>
    <string name="register_token_title">کد فعال سازی</string>
    <string name="register_token">کد ارسالی را وارد کنید.</string>
    <string name="register_token_retry">ارسال مجدد کد فعال سازی</string>
    <string name="register_finger_print">آیا مایل به فعال سازی اثر انگشت برای ورود به برنامه هستید؟</string>
    <string name="register_finger_print_cancel"> لازم نیست</string>
    <string name="register_finger_print_activation">فعال سازی</string>
    <string name="register_as_merchant">درخواست پذیرندگی</string>
    <string name="register_data_edit">ویرایش اطلاعات کاربر</string>
    <string name="register_error_date">تاریخ را به درستی وارد کنید!</string>
    <string name="register_error_sheba"> شماره شبا را به درستی وارد کنید!</string>
    <string name="register_error_name">نام را وارد کنید!</string>
    <string name="register_error_family">نام خانوادگی را وارد کنید!</string>
    <string name="register_error_father">نام پدر را وارد کنید!</string>
    <string name="register_error_day">روز را وارد کنید!</string>
    <string name="register_error_day_length">روز باید 2 رقمی باشد!</string>
    <string name="register_error_day_range">روز وارد شده مجاز نیست!</string>
    <string name="register_error_month">ماه را وارد کنید!</string>
    <string name="register_error_month_length">ماه باید 2 رقمی باشد!</string>
    <string name="register_error_month_range">ماه وارد شده مجاز نیست!</string>
    <string name="register_error_year">سال را وارد کنید!</string>
    <string name="register_error_year_length">سال باید 4 رقمی باشد!</string>
    <string name="register_error_year_range">سال وارد شده مجاز نیست!</string>
    <string name="register_error_nationalcode">کد ملی را وارد کنید!</string>
    <string name="register_error_nationalcode_lenght">کد ملی باید 10 رقمی باشد!</string>
    <string name="register_error_email">ایمیل را وارد کنید!</string>
    <string name="register_error_email_format">ایمیل وارد شده صحیح نیست!</string>
    <string name="register_success">اطلاعات با موفقیت ثبت شد.</string>
    <string name="next_step">گام بعدی</string>
    <string name="previous_step">گام قبلی</string>
    <string name="personal_info">مشخصات فردی</string>
    <string name="email">آدرس ایمیل</string>
    <string name="upload_file">آپلود تصویر کارت ملی</string>
    <string name="camera">دوربین</string>
    <string name="gallery">گالری</string>
    <string name="business_name">نام کسب و کار</string>
    <string name="phone">تلفن ثابت</string>
    <string name="website_address">آدرس وب سایت</string>
    <string name="city_code">پیش شماره شهر</string>
    <string name="register_error_citycode">پیش شماره  شهر را وارد کنید!</string>
    <string name="register_error_web_address">آدرس وب سایت معتبر نیست!</string>
    <string name="register_error_phone">تلفن ثابت را وارد کنید!</string>
    <string name="register_error_phone_lenght">تلفن ثابت معتبر نیست!</string>
    <string name="register_error_business_name">"نام کسب و کار را وارد کنید!"</string>
    <string name="register_citycode_lenght">کد شهر  باید 3 رقمی باشد!</string>
    <string name="register_error_sheba_length">شماره شبا باید 24 رقم باشد!</string>
    <string name="top_up_phone">شماره همراه</string>
    <string name="data_validation_mobileNo">شماره همراه خود را صحیح وارد نمایید.</string>
    <string name="nfc_pay">دریافت NFC</string>
    <string name="qr_pay">دریافت QR</string>
    <string name="linkpay">link pay</string>
    <string name="bill">قبض</string>
    <string name="bills">قبوض</string>
    <string name="cash">دریافت نقدی</string>
    <string name="accounting">حسابداری</string>
    <string name="support">پشتیبانی</string>
    <string name="last_transactions">آخرین تراکنش ها</string>
    <string name="amount_inadequate_error">مبلغ را وارد کنید!</string>
    <string name="present_your_qr"> لطفاً کد QR خود را به مشتری ارائه دهید.</string>
    <string name="qr_amount">مبلغ QR</string>
    <string name="get_close_your_phone"> لطفا گوشی خود را به گوشی مشتری نزدیک کنید.</string>
    <string name="nfc_connecting">در حال اتصال… </string>
    <string name="device_not_support_nfc">دستگاه قابلیت اتصال NFC ندارد! </string>
    <string name="nfc_amount">مبلغ NFC</string>
    <string name="nfc_disconnect">دستگاه شما غیر فعال است </string>
    <string name="member_bill"> عضو </string>
    <string name="new_single_bill">قبض تکی جدید</string>
    <string name="send_to_new_number_bill">ارسال به شماره جدید</string>
    <string name="single_bill">قبض تکی</string>
    <string name="create_single_bill">ایجاد قبض تکی</string>
    <string name="create_group_bill">ایجاد قبض گروهی</string>
    <string name="group_bill">قبض گروهی</string>
    <string name="bill_box">صندوق قبض </string>
    <string name="new_group_bill"> قبض گروهی جدید</string>
    <string name="new_user_block">بلاک کاربر جدید</string>
    <string name="blocked_user">  کاربرهای بلاک شده</string>
    <string name="group_title">عنوان گروه</string>
    <string name="bill_title">عنوان قبض</string>
    <string name="bill_history">سوابق قبض ها</string>
    <string name="bill_group_detail">جزئیات قبض گروهی</string>
    <string name="bill_add_group">تعریف گروه جدید</string>
    <string name="bestpay_friends">گروه های بیست پی شما</string>
    <string name="friends">دوستان شما</string>
    <string name="bill_descreption">توضیحات قبض</string>
    <string name="bill_divide_amount">تقسیم بین اعضا</string>
    <string name="bill_set_amount">تنظیم برای هر یک از اعضا</string>
    <string name="bill_add_contact">افزودن اعضا</string>
    <string name="bill_save_group_button">ذخیره گروه </string>
    <string name="bill_change_contact">تغییر اعضا </string>
    <string name="bill_save_contact_as_group">آیا میخواهید این افراد را به عنوان گروه ذخیره کنید؟ </string>
    <string name="bill_group_name">نام گروه </string>
    <string name="bill_create_successfuly">قبض با موفقیت صادر شد. </string>
    <string name="group_create_successfuly">گروه با موفقیت ذخیره شد. </string>
    <string name="bill_create_failed">صدور قبض با خطا مواجه شد. </string>
    <string name="bill_group_management">مدیریت گروه ها </string>
    <string name="bill_state_canceled"> رد شده </string>
    <string name="bill_state_pending">در انتظار دریافت </string>
    <string name="bill_state_success">دریافت شده </string>
    <string name="bill_total_amount">مجموع مبالغ قبض</string>
    <string name="bill_remained_amount">مجموع مبالغ مانده</string>
    <string name="bill_received_amount">مجموع مبالغ دریافتی</string>
    <string name="bill_create_date">تاریخ صدور</string>
    <string name="bill_receivers">دریافت کنندگان قبض</string>
    <string name="bill_receiver_not_selected">هیچ گیرنده ای برای قبض انتخاب نشده است!</string>
    <string name="bill_receiver_select">انتخاب گیرندگان قبض</string>
    <string name="bill_type">نوع قبض</string>
    <string name="received">دریافت شده</string>
    <string name="bill_date">تاریخ قبض</string>
    <string name="bill_status">وضعیت قبض</string>
    <string name="remove_member_dialog_title">حذف </string>
    <string name="remove_member_dialog_description">آیا از حذف فرد مورد نظر اطمینان دارید؟</string>
    <string name="remove_group_dialog_description">آیا از حذف این گروه اطمینان دارید؟</string>
    <string name="remove_group">حذف گروه</string>
    <string name="remove_member_dismiss">فعلا نه</string>
    <string name="remove_member_confirm">حذف عضو</string>
    <string name="fathers_name">نام پدر</string>
    <string name="sheba_number">شماره شبا </string>
    <string name="IR">IR </string>
    <string name="for_payment">(جهت واریز به حساب شما) </string>
    <string name="name">نام </string>
    <string name="family">نام خانوادگی </string>
    <string name="national_code">کد ملی</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="day">روز</string>
    <string name="month">ماه</string>
    <string name="year">سال</string>
    <string name="instructions">برای ورود اثر انگشت خود را وارد کنید.</string>
    <string name="auth_error">اعتبارسنجی ناموفق</string>
    <string name="date_error">داده نا معتبر</string>
    <string name="daily_income">درآمد امروز</string>
    <string name="monthly_income">درآمد این ماه</string>
    <string name="weekly_income">درآمد این هفته</string>
    <string name="annualy_incom">درآمد اامسال</string>
    <string name="transaction_receipt">رسید تراکنش </string>
    <string name="transaction_detail">جزئیات تراکنش </string>
    <string name="transaction_status">وضعیت تراکنش </string>
    <string name="transaction_tracking_number">شماره پیگیری </string>
    <string name="transaction_amount">مبلغ تراکنش  </string>
    <string name="transaction_date">تاریخ تراکنش </string>
    <string name="transaction_name">به نام </string>
    <string name="transaction_">کارت مبدا</string>
    <string name="transaction_title">گزارش تراکنش‌ها</string>
    <string name="transaction_share_pdf_receipt">اشتراک PDF</string>
    <string name="transaction_share_text_receipt">اشتراک متن</string>
    <string name="support_merchant_guide">راهنما</string>
    <string name="register">ثبت نام</string>
    <string name="privacy">سیاست حفظ حریم‌خصوصی</string>
    <string name="conditions">شرایط استفاده از خدمات</string>
    <string name="question_register">هنوز ثبت نام نکرده اید؟</string>
</resources>